# cli-plus-plus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  package.json
.clangd/index/: Exception.hpp.81CD49E4C68CAF03.idx  commander.hpp.6F9B475FE40618CA.idx  helper.hpp.CB021F2CD67A3B33.idx  main.cpp.8E07DAD8449006E4.idx  option.C1B99473DAB6C7F9.idx
includes/: Command.hpp  colors.hpp  commander.hpp  exception.hpp  helper.hpp  option  option.hpp
src/: commander.cpp  main.cpp
